syntax = "proto3";

import "google/protobuf/any.proto";

option go_package = "/msgs;msgs";

// proto訊息資料
message ProtoMsg {
  int32 messageID = 1; // 訊息編號, 設置為int32以跟proto的列舉類型統一
  google.protobuf.Any message = 2; // 訊息資料
}

// proto訊息測試資料
message ProtoTest {
  string Data = 1; // 測試字串
}